<resources>
    <string name="customer_profile_firstname">first name</string>
    <string name="customer_profile_lastname">last name</string>
    <string name="customer_profile_phone">telephone number</string>
    <string name="customer_profile_mobile">mobile number</string>
    <string name="customer_profile_email">email</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="customer_profile_action_cancel">Cancel</string>
    <string name="customer_profile_action_save">Save</string>
    <string name="product_order_action_logoff">logoff</string>
    <string name="product_order_action_logon">logon</string>
    <string name="product_order_action_scan">scan</string>
    <string name="product_order_action_void">void</string>
    <string name="product_order_action_order_discount">discount order</string>
    <string name="product_order_action_resolve">resolve items</string>
    <string name="product_order_action_resolving">resolving</string>
    <string name="product_order_action_tender">tender</string>
    <string name="product_order_action_tender_disabled">cannot tender</string>
    <string name="product_order_action_tender_progress">working&#8230;</string>
    <string name="product_order_indicator_discount">discount percent</string>
    <string name="product_order_indicator_discount_order">order discount percent</string>
    <string name="product_order_indicator_total">total</string>
    <string name="product_order_action_customer">customer</string>
    <string name="product_order_hint_currency">0.00</string>
    <string name="product_order_hint_percent">0.00</string>
    <string name="product_order_hint_customer">UNKNOWN CUSTOMER</string>
    <string name="product_order_hint_user">UNKNOWN USER</string>
    <string name="product_order_hint_itemcount">(0)</string>
    <string name="product_order_hint_shop">UNKNOWN SHOP</string>
    <string name="product_order_action_item_discount">discount item</string>
    <string name="product_order_action_item_delete">delete item</string>
    <string name="product_order_action_item_tally">tally item</string>
    <string name="product_order_action_item_price">manual price</string>
    <string name="product_order_action_note">note</string>
    <string name="product_order_tender_title">Tender</string>
    <string name="product_order_tender_description">Choose how to handle this order.</string>
    <string name="product_order_tender_action_park">Park</string>
    <string name="product_order_tender_action_park_description">Park this order to ShopKeeper.</string>
    <string name="product_order_tender_action_park_confirmation">Confirm to submit this order to be parked.</string>
    <string name="product_order_tender_action_cash">Cash</string>
    <string name="product_order_tender_action_cash_description">Submit this order for cash payment.</string>
    <string name="product_order_tender_action_cash_confirmation">Confirm to submit this order for cash payment.</string>
    <string name="product_order_tender_action_terminal">Terminal</string>
    <string name="product_order_tender_action_terminal_description">Submit this order for terminal processing.</string>
    <string name="product_order_tender_action_terminal_confirmation">Confirm to submit this order for terminal
        processing.
    </string>
    <string name="product_order_tender_action_invoice">Invoice</string>
    <string name="product_order_tender_action_invoice_description">Submit this order to be invoiced.</string>
    <string name="product_order_tender_action_invoice_confirmation">Confirm to submit this order for invoicing.</string>
    <string name="product_order_tender_action_offer">Offer</string>
    <string name="product_order_tender_action_offer_description">Submit this order as an offer.</string>
    <string name="product_order_tender_action_offer_confirmation">Confirm to submit this order as an offer.</string>
    <string name="product_order_tender_action_cancel">Cancel</string>
    <string name="product_order_tender_action_confirm">Confirm</string>
    <string name="application_name">Susoft</string>
    <string name="toast_crash">"Whoa! Susoft Android has crashed. Restarting."</string>
    <string name="bluetooth_MCS3000_connect">Bluetooth Scanner</string>
    <string name="navigation_catagory_inventory_tasks">New Task</string>
    <string name="navigation_catagory_management">Manage</string>
    <string name="navigation_catagory_search">Search</string>
    <string name="navigation_action_inventory_management">Saved Inventory Tasks</string>
    <string name="navigation_action_account">Account</string>
    <string name="navigation_action_gallery">Image Gallery</string>
    <string name="navigation_action_search_product">Search Products</string>
    <string name="navigation_action_search_customer">Search Customers</string>
    <string name="navigation_action_search_order">Search Orders</string>
    <string name="navigation_action_menu_left">Menu</string>
    <string name="navigation_action_menu_right">Manage</string>
    <string name="navigation_action_account_description">Submit account credentials for authorization.</string>
    <string name="navigation_action_inventory_management_description">Manage saved inventory tasks.</string>
    <string name="navigation_action_counting_description">Begin an inventory stock count session.</string>
    <string name="navigation_action_label_description">Print labels for existing products.</string>
    <string name="navigation_action_order_description">Start the point of sale feature that is easy to use.</string>
    <string name="navigation_action_procurement_description">Place a vendor order for existing products.</string>
    <string name="navigation_action_search_product_description">Search for a product using name, barcode, or article
        id.
    </string>
    <string name="navigation_action_search_customer_description">Search for a customer using their first name, last
        name, customer id, email, mobile number, or phone number.
    </string>
    <string name="navigation_action_search_order_description">Search for parked, offered, or suspended order.</string>
    <string name="copyright">© 2014 Susoft™ AS. All rights reserved.</string>
    <string name="inventory_task_void">Void</string>
    <string name="inventory_task_counting">Stock Count</string>
    <string name="inventory_task_label">Product Label</string>
    <string name="inventory_task_order">Order</string>
    <string name="inventory_task_procurement">eProcurement</string>
    <string name="product_inventory_handle_hint">Inventory Handle Missing</string>
    <string name="product_inventory_count_hint">0</string>
    <string name="product_inventory_action_new">New</string>
    <string name="product_inventory_action_view">View</string>
    <string name="product_inventory_action_delete">Delete</string>
    <string name="product_inventory_action_upload">Upload</string>
    <string name="product_inventory_action_shop">Shop</string>
    <string name="product_inventory_action_scan">Scan</string>
    <string name="product_inventory_action_resolve">Resolve</string>
    <string name="product_inventory_action_memo">Note</string>
    <string name="product_inventory_action_search">Search</string>
    <string name="product_barcode_action_discount">Discount</string>
    <string name="product_barcode_action_delete">Delete</string>
    <string name="product_barcode_action_tally">Tally</string>
    <string name="product_barcode_action_resolve">Resolve</string>
    <string name="product_barcode_value_hint">Barcode Value Missing</string>
    <string name="product_barcode_cost_hint">0</string>
    <string name="product_barcode_retail">Retail</string>
    <string name="product_barcode_wholesale">W/S</string>
    <string name="product_barcode_stock">Stock</string>
    <string name="product_barcode_edit_button_25">25</string>
    <string name="product_barcode_edit_button_05">5</string>
    <string name="product_barcode_edit_button_plus">+</string>
    <string name="product_barcode_edit_button_minus">-</string>
    <string name="product_barcode_edit_sum_hint">0</string>
    <string name="product_barcode_edit_adjustment_hint">+0</string>
    <string name="product_barcode_edit_memo">Note</string>
    <string name="account_dialog_title">Account</string>
    <string name="account_dialog_button_positive">Authenticate</string>
    <string name="account_dialog_form_username_hint">Username</string>
    <string name="account_dialog_form_password_hint">Password</string>
    <string name="account_dialog_form_license_hint">License Key</string>
    <string name="account_dialog_form_chain_hint">Chain</string>
    <string name="account_dialog_button_remember">Remember user</string>
    <string name="account_dialog_ssl">SSL Security</string>
    <string name="account_dialog_form_missing_username">Enter a login.</string>
    <string name="account_dialog_form_missing_password">Enter a password.</string>
    <string name="account_dialog_form_missing_license">Enter license key.</string>
    <string name="account_dialog_form_missing_chainame">Enter a chain name.</string>
    <string name="exception_item_title">EXCEPTION</string>
    <string name="searchCustDialogText">Search for a customer:</string>
    <string name="search">Search</string>
    <string name="customer_id_header_text">Customer ID</string>
    <string name="customer_firstname_header_text">First name</string>
    <string name="customer_lastname_header_text">Last name</string>
    <string name="customer_email_header_text">Email</string>
    <string name="customer_phone_header_text">Phone</string>
    <string name="customer_mobile_header_text">Mobile</string>
    <string name="foundNoMatches">Found 0 matches for your search.</string>
    <string name="new_customer_firstname_text">First Name *</string>
    <string name="new_customer_lastname_text">Last Name *</string>
    <string name="new_customer_email_text">Email</string>
    <string name="new_customer_phone_text">Phone</string>
    <string name="new_customer_mobile_text">Mobile *</string>
    <string name="done">Done</string>
    <string name="cash_button">Cash</string>
    <string name="card_button">Card</string>
    <string name="other_button">Other</string>
    <string name="terminal">Terminal</string>
    <string name="dashboard">Dashboard</string>
    <string name="week_sale">Week Sale</string>
    <string name="key_performance">Key Performance</string>
    <string name="giftcards">Giftcards</string>
    <string name="reprint_receipt">Reprint Receipt</string>
    <string name="x_report">X-Report</string>
    <string name="z_report">Z-Report</string>
    <string name="reconciliation">Reconciliation</string>
    <string name="cashcount">Cashcount</string>
    <string name="voucher">Voucher</string>
    <string name="stock">Stock</string>
    <string name="stock_order">Order</string>
    <string name="stock_movement">Move between shops</string>
    <string name="stock_correction">Correction</string>
    <string name="stock_return">Return to vendor</string>
    <string name="open_cashdraw">Open Cashdraw</string>
    <string name="amount_to_use">Amount to use</string>
    <string name="shop_issued">Shop issued</string>
    <string name="gift_card_number">Gift card number</string>
    <string name="gift_card_current_amount">Current amount</string>
    <string name="issued_by">Issued by</string>
    <string name="issued_date">Issue date</string>
    <string name="order_search">Order Search</string>
    <string name="supply_report">Supply Report</string>
    <string name="print_last_trans_result">Last Transaction</string>
    <string name="chat">Chat</string>
    <string name="person">Person</string>
    <string name="company">Company</string>
    <string name="new_customer_address1_text">Address 1</string>
    <string name="new_customer_address2_text">Address 2</string>
    <string name="new_customer_zip_text">Zip</string>
</resources>