<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/list_customer_id_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:text="@string/customer_id_header_text"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/list_customer_firstname_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:text="@string/customer_firstname_header_text"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/list_customer_lastname_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:text="@string/customer_lastname_header_text"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/list_customer_email_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:text="@string/customer_email_header_text"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/list_customer_phone_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:text="@string/customer_phone_header_text"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/list_customer_mobile_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:text="@string/customer_mobile_header_text"
        android:textColor="@android:color/black" />

</LinearLayout>