<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="500dp"
    android:layout_height="wrap_content"
    tools:context="no.susoft.mobile.pos.ui.dialog.CustomerSearchDialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchCustDialogText"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <EditText
            android:id="@+id/customer_search_text"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:gravity="fill_horizontal"
            android:layout_weight="4"
            android:layout_width="0dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/customer_search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/search" />

            <ProgressBar
                android:id="@+id/progressBarCustomerSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:progress="1"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/customer_search_no_match"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:text="@string/foundNoMatches"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/customer_list_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/list_customer_id_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/customer_id_header_text"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/list_customer_firstname_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/customer_firstname_header_text"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/list_customer_lastname_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/customer_lastname_header_text"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/list_customer_email_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/customer_email_header_text"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/list_customer_phone_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/customer_phone_header_text"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/list_customer_mobile_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/customer_mobile_header_text"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <ListView
        android:id="@+id/customer_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:listSelector="#d7d7d7" />


</LinearLayout>
